--- a/p3_data_warehouse_redshift/dwh.cfg
+++ b/p3_data_warehouse_redshift/dwh.cfg
@@ -1,14 +1,25 @@
 [CLUSTER]
 HOST=
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
-DB_PORT=
+DB_NAME=dwh
+DB_USER=dwhuser
+DB_PASSWORD=Passw0rd
+DB_PORT=5439
 
 [IAM_ROLE]
-ARN=''
+ARN=
 
 [S3]
-LOG_DATA='s3://udacity-dend/log_data'
-LOG_JSONPATH='s3://udacity-dend/log_json_path.json'
-SONG_DATA='s3://udacity-dend/song_data'
+LOG_DATA=s3://udacity-dend/log-data
+LOG_JSONPATH=s3://udacity-dend/log_json_path.json
+SONG_DATA=s3://udacity-dend/song-data
+
+[DWH]
+CLUSTER_TYPE=multi-node
+NUM_NODES=4
+NODE_TYPE=dc2.large
+IAM_ROLE_NAME=dwhrole
+CLUSTER_IDENTIFIER=dwhcluster
+DB_NAME=dwh
+DB_USER=dwhuser
+DB_PASSWORD=Passw0rd
+DB_PORT=5439
