--- a/p3_data_warehouse_redshift/dwh.cfg
+++ b/p3_data_warehouse_redshift/dwh.cfg
@@ -1,5 +1,20 @@
+[AWS]
+KEY=
+SECRET=
+
 [CLUSTER]
 HOST=
+DB_NAME=dwh
+DB_USER=dwhuser
+DB_PASSWORD=Passw0rd
+DB_PORT=5439
+
+[DWH]
+CLUSTER_TYPE=multi-node
+NUM_NODES=4
+NODE_TYPE=dc2.large
+IAM_ROLE_NAME=dwhrole
+CLUSTER_IDENTIFIER=dwhcluster
 DB_NAME=dwh
 DB_USER=dwhuser
 DB_PASSWORD=Passw0rd
@@ -12,14 +27,3 @@ ARN=
 LOG_DATA=s3://udacity-dend/log-data
 LOG_JSONPATH=s3://udacity-dend/log_json_path.json
 SONG_DATA=s3://udacity-dend/song-data
-
-[DWH]
-CLUSTER_TYPE=multi-node
-NUM_NODES=4
-NODE_TYPE=dc2.large
-IAM_ROLE_NAME=dwhrole
-CLUSTER_IDENTIFIER=dwhcluster
-DB_NAME=dwh
-DB_USER=dwhuser
-DB_PASSWORD=Passw0rd
-DB_PORT=5439
