create and connect to cluster now working

--- a/p3_data_warehouse_redshift/dwh.cfg
+++ b/p3_data_warehouse_redshift/dwh.cfg
@@ -1,29 +1,30 @@
 [AWS]
-KEY=
-SECRET=
+key = AKIAW3XBD5V6FDBBNQ3V
+secret = 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
 
 [CLUSTER]
-HOST=
-DB_NAME=dwh
-DB_USER=dwhuser
-DB_PASSWORD=Passw0rd
-DB_PORT=5439
+host = dwhcluster2.cntkjszqsfyc.us-west-2.redshift.amazonaws.com
+db = dwh
+db_user = dwhuser
+db_password = Passw0rd
+port = 5439
 
 [DWH]
-CLUSTER_TYPE=multi-node
-NUM_NODES=4
-NODE_TYPE=dc2.large
-IAM_ROLE_NAME=dwhrole
-CLUSTER_IDENTIFIER=dwhcluster
-DB_NAME=dwh
-DB_USER=dwhuser
-DB_PASSWORD=Passw0rd
-DB_PORT=5439
+cluster_type = multi-node
+num_nodes = 4
+node_type = dc2.large
+iam_role_name = dwhrole
+cluster_identifier = dwhcluster2
+db = dwh
+db_user = dwhuser
+db_password = Passw0rd
+port = 5439
 
 [IAM_ROLE]
-ARN=
+arn = arn:aws:iam::471844777340:role/dwhrole
 
 [S3]
-LOG_DATA=s3://udacity-dend/log-data
-LOG_JSONPATH=s3://udacity-dend/log_json_path.json
-SONG_DATA=s3://udacity-dend/song-data
+log_data = s3://udacity-dend/log-data
+log_jsonpath = s3://udacity-dend/log_json_path.json
+song_data = s3://udacity-dend/song-data
+
