removed keys from config params

--- a/p3_data_warehouse_redshift/dwh.cfg
+++ b/p3_data_warehouse_redshift/dwh.cfg
@@ -1,9 +1,9 @@
 [AWS]
-key = AKIAW3XBD5V6FDBBNQ3V
-secret = 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
+key =
+secret = +
 
 [CLUSTER]
-host = dwhcluster2.cntkjszqsfyc.us-west-2.redshift.amazonaws.com
+host =
 db = dwh
 db_user = dwhuser
 db_password = Passw0rd
@@ -21,10 +21,9 @@ db_password = Passw0rd
 port = 5439
 
 [IAM_ROLE]
-arn = arn:aws:iam::471844777340:role/dwhrole
+arn = 
 
 [S3]
 log_data = s3://udacity-dend/log-data
 log_jsonpath = s3://udacity-dend/log_json_path.json
 song_data = s3://udacity-dend/song-data
-
