--- a/p3_data_warehouse_redshift/dwh.cfg
+++ b/p3_data_warehouse_redshift/dwh.cfg
@@ -1,6 +1,6 @@
 [AWS]
 key =
-secret = +
+secret = 
 
 [CLUSTER]
 host =
@@ -21,7 +21,7 @@ db_password = Passw0rd
 port = 5439
 
 [IAM_ROLE]
-arn = 
+arn =
 
 [S3]
 log_data = s3://udacity-dend/log-data
