added data directories

--- a/p4_data_lake_spark/dl.cfg
+++ b/p4_data_lake_spark/dl.cfg
@@ -1,5 +1,7 @@
-AWS_ACCESS_KEY_ID=''
-AWS_SECRET_ACCESS_KEY=''
+[AWS]
+KEY = ''
+SECRET = ''
 
-'INPUT_DATA_DIR'=''
-'OUTPUT_DATA_DIR'=''
+[DATA]
+INPUT_DIR = 's3a://udacity-dend/'
+OUTPUT_DIR = 's3a://sparkify-dend/'
