made data path naming more intuitive

--- a/p4_data_lake_spark/dl.cfg
+++ b/p4_data_lake_spark/dl.cfg
@@ -3,5 +3,6 @@ KEY = ''
 SECRET = ''
 
 [DATA]
-INPUT_DIR = 's3a://udacity-dend/'
+SONG_FILES = '/data/song_data/*.json'
+LOG_FILES = '/data/log_data/*.json'
 OUTPUT_DIR = 's3a://sparkify-dend/'
